quoting-CypressTK1/force-app/main/default/objects/VolumeDiscountTier__c/VolumeDiscountTier__c.object-meta.xml
<CustomObject>
    <description>Object holding volume discount tier details</description>
    <label>Volume Discount Tier</label>
    <nameField>
        <displayFormat>QVDT-{00000}</displayFormat>
        <label>Volume Discount Tier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volume Discount Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>