quoting-CypressTK1/force-app/main/default/objects/VolumeDiscountTier__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Quote volume discount tier percentage amount</description>
    <inlineHelpText>Quote volume discount tier percentage amount</inlineHelpText>
    <label>Discount</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>