quoting-CypressTK1/force-app/main/default/objects/VolumeDiscountTier__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <description>Quote volume discount tier from numeric value</description>
    <inlineHelpText>Quote volume discount tier from numeric value</inlineHelpText>
    <label>From</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>