quoting-CypressTK1/force-app/main/default/objects/VolumeDiscountTier__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Tier number indicating order within set of sibling records</description>
    <inlineHelpText>Tier number</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>