quoting-CypressTK1/force-app/main/default/objects/VolumeDiscountTier__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>Quote volume discount tier to numeric value</description>
    <inlineHelpText>Quote volume discount tier to numeric value</inlineHelpText>
    <label>To</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>