quoting-CypressTK1/force-app/main/default/objects/VolumeDiscountTier__c/fields/VolumeDiscountId__c.field-meta.xml
<CustomField>
    <fullName>VolumeDiscountId__c</fullName>
    <description>Relationship to parent object Volume Discount</description>
    <inlineHelpText>Relationship to parent object Volume Discount</inlineHelpText>
    <label>Volume Discount</label>
    <referenceTo>VolumeDiscount__c</referenceTo>
    <relationshipLabel>Volume Discount Tiers</relationshipLabel>
    <relationshipName>VolumeDiscountTiers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>